# Copyright 2025 The Brotli Authors. All rights reserved.
#
# Distributed under MIT license.
# See file LICENSE for detail or copy at https://opensource.org/licenses/MIT

"""Brotli reference implementation"""

module(
    name = "brotli_java",
    version = "1.2.0",
    repo_name = "org_brotli_java",
)

bazel_dep(name = "rules_java", version = "8.12.0")
bazel_dep(name = "rules_jvm_external", version = "6.7")
bazel_dep(name = "rules_kotlin", version = "2.1.4")
bazel_dep(name = "platforms", version = "0.0.11")
bazel_dep(name = "brotli", version = "1.2.0", repo_name = "org_brotli")
local_path_override(
    module_name = "brotli",
    path = "..",
)

maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
maven.install(
    artifacts = [
        "com.code-intelligence:jazzer:0.28.0",
        "com.code-intelligence:jazzer-api:0.28.0",
        "org.apache.commons:commons-compress:1.26.1",
    ],
    repositories = [
        "https://repo1.maven.org/maven2",
    ],
)
use_repo(maven, "maven")
