# Description:
#   Java port of Brotli decoder.

load(":build_defs.bzl", "brotli_java_test")

package(default_visibility = ["//visibility:public"])

licenses(["notice"])  # MIT

TEST_DEPS = [
    ":dec",
    ":test_utils",
]

java_library(
    name = "dec",
    srcs = glob(
        ["*.java"],
        exclude = [
            "Decoder.java",
            "*Test*.java",
        ],
    ),
    proguard_specs = ["proguard.pgcfg"],
    resources = ["//:license"],
)

java_library(
    name = "test_utils",
    srcs = ["TestUtils.java"],
    deps = [":dec"],
)

brotli_java_test(
    name = "BitReaderTest",
    srcs = ["BitReaderTest.java"],
    deps = TEST_DEPS,
)

brotli_java_test(
    name = "DecodeTest",
    srcs = ["DecodeTest.java"],
    test_kotlin = True,
    deps = TEST_DEPS,
)

brotli_java_test(
    name = "DictionaryTest",
    srcs = ["DictionaryTest.java"],
    deps = TEST_DEPS,
)

brotli_java_test(
    name = "EagerStreamTest",
    srcs = ["EagerStreamTest.java"],
    deps = TEST_DEPS,
)

brotli_java_test(
    name = "SynthTest",
    srcs = ["SynthTest.java"],
    test_kotlin = True,
    deps = TEST_DEPS,
)

brotli_java_test(
    name = "TransformTest",
    srcs = ["TransformTest.java"],
    deps = TEST_DEPS,
)

java_test(
    name = "decode_fuzz_test",
    srcs = ["DecodeFuzzTest.java"],
    args = ["--target_class=org.brotli.dec.DecodeFuzzTest"],
    jvm_flags = ["-DBROTLI_ENABLE_ASSERTS=true"],
    main_class = "com.code_intelligence.jazzer.Jazzer",
    use_testrunner = False,
    deps = [
        ":dec",
        "@maven//:com_code_intelligence_jazzer",
        "@maven//:com_code_intelligence_jazzer_api",
    ],
)

java_test(
    name = "round_trip_fuzz_test",
    srcs = ["RoundTripFuzzTest.java"],
    args = ["--target_class=org.brotli.dec.RoundTripFuzzTest"],
    data = ["//org/brotli/wrapper/enc:brotli_jni"],
    jvm_flags = [
        "-DBROTLI_ENABLE_ASSERTS=true",
        "-DBROTLI_JNI_LIBRARY=$(location //org/brotli/wrapper/enc:brotli_jni)",
    ],
    main_class = "com.code_intelligence.jazzer.Jazzer",
    use_testrunner = False,
    deps = [
        ":dec",
        "//org/brotli/wrapper/enc:enc",
        "@maven//:com_code_intelligence_jazzer",
        "@maven//:com_code_intelligence_jazzer_api",
    ],
)

java_test(
    name = "diff_fuzz_test",
    srcs = ["DiffFuzzTest.java"],
    args = ["--target_class=org.brotli.dec.DiffFuzzTest"],
    jvm_flags = ["-DBROTLI_ENABLE_ASSERTS=true"],
    main_class = "com.code_intelligence.jazzer.Jazzer",
    use_testrunner = False,
    deps = [
        ":dec",
        "@maven//:com_code_intelligence_jazzer",
        "@maven//:com_code_intelligence_jazzer_api",
        "@maven//:org_apache_commons_commons_compress",
    ],
)
